monitering/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: medical-shop
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
